[tool.poetry]
name = "music_bot"
version = "0.1.0"
description = "A Telegram Music Bot"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "*"
tgcrypto = "*"
pytgcalls = "*"
yt-dlp = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
